# clean-fastapi-project

./: .dockerignore  .env.secret.tmpl  .gitignore  CHANGELOG  CONTRIBUTING.md  Makefile  celery-requirements.txt  pyproject.toml
app/: app.py  app_headers.py  app_settings.py
app/internal/extensions/ext_kafka/: producer.py
app/internal/extensions/ext_mongo/: ha.py
app/internal/extensions/ext_redis/: __init__.py  keys.py
app/internal/infra/http_session/: __init__.py
app/internal/infra/jpush/: __init__.py
app/internal/infra/jwt/: __init__.py
app/internal/infra/qrcode/: __init__.py
app/internal/infra/redlock/: __init__.py
app/internal/infra/sms/: __init__.py
app/internal/logger/: default_logger.py  loguru_logger.py
app/internal/rpc_client/: __init__.py
app/internal/rpc_client/proto_gens/: content_audit_service_pb2.py  content_audit_service_pb2.pyi  content_audit_service_pb2_grpc.py  infra_object_storage_service_pb2.py  (+5 more)
app/internal/utils/: helper.py
app/pkg/googauth/: __init__.py  googauth.py  test_googauth.py
celery_app/: app.py  app_control.py
celery_app/tasks/: example_task.py
devops/docker/: celery_dashboard.Dockerfile  celery_worker.Dockerfile  dev.Dockerfile  release.Dockerfile
devops/docker-compose/: infra.yaml  infra_endpoints.txt
devops/kubernates/: .env.chart.tmpl  Makefile  README.md  render.py  requirements.txt
devops/kubernates/chart-pkg-template/: .helmignore  Chart.yaml.tmpl  delete.sh.tmpl  install.sh.tmpl  values.yaml.tmpl
devops/scripts/: install-docker-ce-on-ubuntu.sh
docs/: conf.py  uvicorn.txt
(+6 files in other folders)
